--- a/galaxy_collections.yml
+++ b/galaxy_collections.yml
@@ -1,7 +1,6 @@
 ---
-- name: community general
-  hosts: local
-  tasks:
-    - name: community general
-      collections:
-        - community.general
+- hosts: local
+  connection: local
+  become: yes
+  roles:
+    - add_galaxy
