--- a/roles/add_galaxy/tasks/main.yml
+++ b/roles/add_galaxy/tasks/main.yml
@@ -5,5 +5,6 @@
     
 - name: Install a package using a role from community.general
   community.general.yum_versionlock:
-    name: nano
+    name: 
+      - nano
     state: present
