--- a/roles/add_galaxy/tasks/main.yml
+++ b/roles/add_galaxy/tasks/main.yml
@@ -5,3 +5,8 @@
     
 - name: Show python lib/site paths
   community.general.python_requirements_info:
+  register: result_variable
+
+- name: show result_variable
+  debug:
+    msg: "{{ result_variable }}"
